--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -27,5 +27,6 @@ textarea {
 :root {
   --naver-green: #00c73c;
   --background-color: #f9f9f9;
+  --card-background: #f7f9fa;
   --button-shadow: 0 1px 2px 0 rgb(0 0 0 / 5%);
 }
