--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,9 +20,14 @@
   grid-template-rows: 5fr 1fr;
 }
 .spinbox-window {
-  display: flex;
-  justify-content: space-between;
+  /* display: flex;
+  justify-content: space-between; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  gap: 10px;
   padding: 1em;
+  /* overflow-y: scroll; */
 }
 
 /** button related css */
@@ -56,8 +61,9 @@
   display: flex;
   justify-content: space-between;
   padding: 0.7em;
-  height: 10%;
-  width: 30%;
+  /* height: 62px; */
+  /* height: 10%; */
+  /* width: 30%; */
   border-radius: 4px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
