--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,19 +20,16 @@
   grid-template-rows: 5fr 1fr;
 }
 .spinbox-window {
-  /* display: flex;
-  justify-content: space-between; */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(6, 1fr);
   gap: 10px;
   padding: 1em;
-  /* overflow-y: scroll; */
 }
 
 /** button related css */
 .button-common {
-  width: 18%;
+  width: 22%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -61,19 +58,21 @@
   display: flex;
   justify-content: space-between;
   padding: 0.7em;
-  /* height: 62px; */
-  /* height: 10%; */
-  /* width: 30%; */
   border-radius: 4px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 .number-window {
-  width: 40%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 50%;
   background-color: var(--card-background);
+}
+.input-window {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+  text-align: center;
+  font-size: 2rem;
 }
 
 /** icon */
