--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,6 +24,7 @@
   grid-template-rows: repeat(8, 1fr);
   gap: 10px;
   padding: 1em;
+  overflow-y: scroll;
 }
 .add-spinbox-area {
   display: flex;
