--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,12 @@
   box-sizing: border-box;
 }
 
-html, body, div, nav, textarea, button {
+html,
+body,
+div,
+nav,
+textarea,
+button {
   margin: 0;
   padding: 0;
   border: 0;
@@ -22,8 +27,9 @@ textarea {
 .container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-areas:  "nav nav"
-                        "input output";
+  grid-template-areas:
+    'nav nav'
+    'input output';
   border: 1px solid rgb(229, 229, 229);
 }
 
@@ -47,6 +53,7 @@ textarea {
   height: 50vh;
   grid-area: output;
   padding: 10px 25px;
+  max-width: 40vw;
 }
 
 /** toolbar related css */
